test/sema/unknown-variable.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:15: error: unknown identifier 'unknown'
    var foo = unknown;
}
